<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.auth.LoginFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image1"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_top_corners">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="27sp"
            android:gravity="center"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account"
            android:alpha="0.7"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_alamat_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:placeholderText="@string/masukkan_email_anda">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:passwordToggleEnabled="true"
            app:placeholderText="@string/masukkan_password_anda">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textColor="@color/primary_color"
            android:textStyle="bold"/>
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_fileName="plant.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_marginTop="170dp"
        android:layout_gravity="top|end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="bottom"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />
        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorLink="@color/primary_color"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>
</FrameLayout>