<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.auth.ForgotPasswordFragment">
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_arrow_back"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/forgot_password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_forgot_password"
            android:textSize="27sp"
            android:gravity="center"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_forgot_password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:alpha="0.7"
            android:gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_alamat_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:placeholderText="@string/masukkan_email_anda">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="bottom"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>
</FrameLayout>